# hs-gchart

./: ChartItems.hs  LICENSE  README.md  TODO.md  Types.hs  hs-gchart.cabal  scratch.hs
Graphics/: GChart.hs
Graphics/GChart/: ChartItems.hs  DataEncoding.hs  Types.hs
Graphics/GChart/ChartItems/: .Colors.hs.swp  .Labels.hs.swp  .Styles.hs.swp  Basics.hs  Colors.hs  Data.hs  Labels.hs  Styles.hs  Util.hs
examples/: Examples.hs
