Cabal-Version: >= 1.2
Name: hs-gchart
Version: 0.1
Synopsis: Haskell wrapper for the Google Chart API
Category: Graphics
License: BSD3
License-File: LICENSE
Author: Deepak Jois
Maintainer: deepak.jois@gmail.com
Copyright: (c) 2010 Deepak Jois <deepak.jois@gmail.com>
Homepage: http://github.com/deepakjois/hs-gchart
Build-Type: Simple
data-files: README.md
Library
  Build-Depends: base >= 3 && < 5, mtl
  hs-source-dirs: .
  other-modules: Graphics.GChart.Types, Graphics.GChart.ChartItems

